PROJECT(cplusplus VERSION 0.1.0)
MESSAGE("Begin to build " ${PROJECT_NAME})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR dir " ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/../../deps)
ENABLE_TESTING()
INCLUDE(GoogleTest)
add_executable_test(singletonTest)
add_executable_test(moveConstructorTest)
ADD_EXECUTABLE(threadpoolTest threadpoolTest.cpp)
TARGET_LINK_LIBRARIES(threadpoolTest pthread)
ADD_EXECUTABLE(mmapTest mmapTest.cpp)
ADD_EXECUTABLE(memoryLayoutTest memoryLayoutTest.cpp)
add_executable_test(lockfreeTest)
add_executable_test(memorderTest)
ADD_EXECUTABLE(spinLockTest spinLockTest.cpp)
TARGET_LINK_LIBRARIES(spinLockTest pthread)
ENABLE_LANGUAGE(ASM)
add_aco_executable(coroutineTest coroutineTest.cpp)