PROJECT(cplusplus VERSION 0.1.0)
MESSAGE("Begin to build " ${PROJECT_NAME})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR dir " ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/../../deps)
ENABLE_TESTING()
INCLUDE(GoogleTest)
add_executable_gtest(singletonTest)
add_executable_gtest(moveConstructorTest)
add_executable_test(threadpoolTest threadpoolTest.cpp)
TARGET_LINK_LIBRARIES(threadpoolTest pthread)
add_executable_test(mmapTest mmapTest.cpp)
add_executable_test(memoryLayoutTest memoryLayoutTest.cpp)
add_executable_gtest(lockfreeTest)
add_executable_gtest(memorderTest)
add_executable_test(spinLockTest spinLockTest.cpp)
TARGET_LINK_LIBRARIES(spinLockTest pthread)
# libaco only implements context switch for i386/x86_64 (see deps/libaco/aco.h).
STRING(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" _ALGO_HOST_CPU)
IF(_ALGO_HOST_CPU MATCHES "^(x86_64|amd64|i386|i686)$")
  ENABLE_LANGUAGE(ASM)
  add_aco_executable(coroutineTest coroutineTest.cpp)
ELSE()
  MESSAGE(STATUS "Skipping coroutineTest: libaco supports x86/x86_64 only (host CPU: ${CMAKE_SYSTEM_PROCESSOR})")
ENDIF()