PROJECT(demo VERSION 0.1.0)
MESSAGE("Begin to build " ${PROJECT_NAME})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR dir " ${PROJECT_SOURCE_DIR})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../lib)
ADD_LIBRARY(demo STATIC demo.cpp)
INSTALL(TARGETS demo LIBRARY DESTINATION lib)

TARGET_INCLUDE_DIRECTORIES(demo PUBLIC ${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/../../deps)
ENABLE_TESTING()
INCLUDE(GoogleTest)
ADD_EXECUTABLE(demoTest demoTest.cpp)
TARGET_LINK_LIBRARIES(demoTest gtest gtest_main demo)
GTEST_DISCOVER_TESTS(demoTest)