PROJECT(hashtable VERSION 0.1.0)
MESSAGE("Begin to build " ${PROJECT_NAME})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR dir " ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/../../deps)
ENABLE_TESTING()
INCLUDE(GoogleTest)
ADD_EXECUTABLE(hashtableTest hashtableTest.cpp)
TARGET_LINK_LIBRARIES(hashtableTest gtest gtest_main)
GTEST_DISCOVER_TESTS(hashtableTest)