PROJECT(lru VERSION 0.1.0)
MESSAGE("Begin to build " ${PROJECT_NAME})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR dir " ${PROJECT_SOURCE_DIR})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../lib)
ADD_LIBRARY(lru STATIC lru.cpp)
INSTALL(TARGETS lru LIBRARY DESTINATION lib)

TARGET_INCLUDE_DIRECTORIES(lru PUBLIC ${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/../../deps)
ENABLE_TESTING()
INCLUDE(GoogleTest)
ADD_EXECUTABLE(lruTest lruTest.cpp)
TARGET_LINK_LIBRARIES(lruTest gtest gtest_main lru)
GTEST_DISCOVER_TESTS(lruTest)